Clean-up composer file.

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "Zack Tollman",
-      "homepage": "http://tollmanz.com/"
+      "homepage": "https://www.tollmanz.com/"
     }
   ],
   "keywords": ["wordpress", "memcached", "object-cache", "wp"],
@@ -15,7 +15,6 @@
     "issues": "https://github.com/tollmanz/wordpress-pecl-memcached-object-cache/issues"
   },
   "require": {
-    "php": ">=5.3",
-    "composer-installers": "1.0.*"
+    "php": ">=5.3"
   }
 }
