--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,11 @@
   },
   "require": {
     "php": ">=5.3"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev",
+      "dev-develop": "2.0.x-dev"
+    }
   }
 }
